--- a/WindowsServerDocs/hyperconverged/index.yml
+++ b/WindowsServerDocs/hyperconverged/index.yml
@@ -32,7 +32,7 @@ sections:
             html: <p>스토리지 하드웨어를 가상화하여 하이퍼 컨버지드 클러스터의 서버에 분산된 가상화된 드라이브 풀에 기반한 볼륨을 만들 수 있습니다.</p>
             image:
               src: ../media/i-store.svg
-            title: 저장소 공간 다이렉트
+            title: 직접 스토리지 공간
           - href: ../failover-clustering/failover-clustering-overview.md
             html: <p>여러 서버를 함께 그룹화하여 클러스터의 모든 서버에서 가상 머신과 같은 워크로드를 실행하고 부하 분산과 장애 조치가 서버 간에 정상적으로 수행될 수 있도록 합니다.</p>
             image:
@@ -43,8 +43,23 @@ sections:
             image:
               src: ../media/i-network.svg
             title: 소프트웨어 방식 네트워킹
+          - href: ../manage/windows-admin-center/overview.md
+            html: <p>클러스터와 기타 Windows 서버를 관리합니다.</p>
+            image:
+              src: ../media/i-admin-center.svg
+            title: Windows Admin Center
+          - href: ../azure-hybrid-services.md
+            html: '<p>사이트 복구, 모니터링 등을 위해 클러스터를 Azure 하이브리드 서비스에 연결합니다.</p>'
+            image:
+              src: ../media/i-microsoft-azure.svg
+            title: Azure 하이브리드 서비스에 연결
+          - href: ../azure-stack-hci
+            html: <p>선택한 파트너가 유효성을 검사한 하드웨어 솔루션을 사용하여 Windows Server 2019 가상화와 클러스터링 기술을 쌍으로 결합하여 소프트웨어 정의 데이터 센터의 튜닝을 추측할 수 있도록 지원합니다.</p>
+            image:
+              src: ../media/i-azure-stack.svg
+            title: Azure Stack HCI
           - href: 'https://www.microsoft.com/cloud-platform/software-defined-datacenter'
-            html: <p>선택한 파트너가 유효성을 검사한 하드웨어 솔루션을 사용하여 Windows Server 가상화와 클러스터링 기술을 쌍으로 결합하여 소프트웨어 정의 데이터 센터의 튜닝을 추측할 수 있도록 지원합니다.</p>
+            html: <p>선택한 파트너가 유효성을 검사한 하드웨어 솔루션을 사용하여 Windows Server 2016 가상화와 클러스터링 기술을 쌍으로 결합하여 소프트웨어 정의 데이터 센터의 튜닝을 추측할 수 있도록 지원합니다.</p>
             image:
               src: 'https://docs.microsoft.com/media/common/i_data-collection.svg'
             title: WSSD(Windows Server 소프트웨어 정의)
