--- a/WindowsServerDocs/hyperconverged/index.yml
+++ b/WindowsServerDocs/hyperconverged/index.yml
@@ -1,65 +1,60 @@
-### YamlMime:YamlDocument
-documentType: LandingData
+### YamlMime:Hub
 title: 하이퍼 컨버지드 인프라 설명서
+summary: 소프트웨어 정의 컴퓨팅, 스토리지 및 네트워킹을 하나의 클러스터에 통합하여 고성능, 비용 효율적이며 쉽게 확장할 수 있는 가상화를 제공합니다.
+brand: windows
 metadata:
-  document_id: null
   title: 하이퍼 컨버지드 인프라 설명서
-  description: 하이퍼 컨버지드 인프라 설명서
-  text: '소프트웨어 정의 컴퓨팅, 스토리지 및 네트워킹을 하나의 클러스터에 통합하여 고성능, 비용 효율적이며 쉽게 확장할 수 있는 가상화를 제공합니다.'
-  keywords: 'Windows Server, Windows Server 2016, Hyper-V, SDN, 스토리지 공간 다이렉트, WSSD'
-  ms.localizationpriority: high
+  description: 소프트웨어 정의 컴퓨팅, 스토리지 및 네트워킹을 하나의 클러스터에 통합하여 고성능, 비용 효율적이며 쉽게 확장할 수 있는 가상화를 제공합니다.
+  ms.service: help
+  ms.topic: hub-page
   author: coreyp-at-msft
   ms.author: coreyp
-  ms.topic: article
-  ms.devlang: na
-sections:
-  - title: null
-  - items:
-      - type: markdown
-        text: '소프트웨어 정의 컴퓨팅, 스토리지 및 네트워킹을 하나의 클러스터에 통합하여 고성능, 비용 효율적이며 쉽게 확장할 수 있는 가상화를 제공합니다.'
-  - items:
-      - type: list
-        style: cards
-        className: cardsI
-        columns: 2
-        items:
-          - href: ../virtualization/hyper-v/index.md
-            html: <p>서버 하드웨어를 가상화하여 하이퍼 컨버지드 클러스터의 서버에서 가상 머신을 실행할 수 있습니다.</p>
-            image:
-              src: ../media/i-virtualize.svg
-            title: Hyper-V
-          - href: ../storage/storage-spaces/storage-spaces-direct-overview.md
-            html: <p>스토리지 하드웨어를 가상화하여 하이퍼 컨버지드 클러스터의 서버에 분산된 가상화된 드라이브 풀에 기반한 볼륨을 만들 수 있습니다.</p>
-            image:
-              src: ../media/i-store.svg
-            title: 직접 스토리지 공간
-          - href: ../failover-clustering/failover-clustering-overview.md
-            html: <p>여러 서버를 함께 그룹화하여 클러스터의 모든 서버에서 가상 머신과 같은 워크로드를 실행하고 부하 분산과 장애 조치가 서버 간에 정상적으로 수행될 수 있도록 합니다.</p>
-            image:
-              src: ../media/i-cluster.svg
-            title: 장애 조치(failover) 클러스터링
-          - href: 'https://docs.microsoft.com/windows-server/networking/sdn/'
-            html: <p>네트워크 하드웨어를 가상화하여 기본 실제 네트워크에서 워크로드를 추상화하는 네트워크와 정책을 동적으로 만들고 관리할 수 있습니다.</p>
-            image:
-              src: ../media/i-network.svg
-            title: 소프트웨어 방식 네트워킹
-          - href: ../manage/windows-admin-center/overview.md
-            html: <p>클러스터와 기타 Windows 서버를 관리합니다.</p>
-            image:
-              src: ../media/i-admin-center.svg
-            title: Windows Admin Center
-          - href: ../azure-hybrid-services.md
-            html: '<p>사이트 복구, 모니터링 등을 위해 클러스터를 Azure 하이브리드 서비스에 연결합니다.</p>'
-            image:
-              src: ../media/i-microsoft-azure.svg
-            title: Azure 하이브리드 서비스에 연결
-          - href: ../azure-stack-hci
-            html: <p>선택한 파트너가 유효성을 검사한 하드웨어 솔루션을 사용하여 Windows Server 2019 가상화와 클러스터링 기술을 쌍으로 결합하여 소프트웨어 정의 데이터 센터의 튜닝을 추측할 수 있도록 지원합니다.</p>
-            image:
-              src: ../media/i-azure-stack.svg
-            title: Azure Stack HCI
-          - href: 'https://www.microsoft.com/cloud-platform/software-defined-datacenter'
-            html: <p>선택한 파트너가 유효성을 검사한 하드웨어 솔루션을 사용하여 Windows Server 2016 가상화와 클러스터링 기술을 쌍으로 결합하여 소프트웨어 정의 데이터 센터의 튜닝을 추측할 수 있도록 지원합니다.</p>
-            image:
-              src: 'https://docs.microsoft.com/media/common/i_data-collection.svg'
-            title: WSSD(Windows Server 소프트웨어 정의)
+  ms.date: 06/10/2020
+  ms.openlocfilehash: 1d2ec270e90423f2405b664f22de7ca85c540498
+  ms.sourcegitcommit: 568b924d32421256f64abfee171304f1daf320d2
+  ms.translationtype: HT
+  ms.contentlocale: ko-KR
+  ms.lasthandoff: 06/18/2020
+  ms.locfileid: "85070162"
+productDirectory:
+  items:
+  - title: Hyper-V
+    imageSrc: https://docs.microsoft.com/en-us/windows-server/media/i-virtualize.svg
+    links:
+    - url: https://docs.microsoft.com/en-us/windows-server/virtualization/hyper-v/
+      text: 서버 하드웨어를 가상화하여 하이퍼 컨버지드 클러스터의 서버에서 가상 머신을 실행할 수 있습니다.
+  - title: 직접 스토리지 공간
+    imageSrc: https://docs.microsoft.com/en-us/windows-server/media/i-store.svg
+    links:
+    - url: https://docs.microsoft.com/en-us/windows-server/storage/storage-spaces/storage-spaces-direct-overview
+      text: 스토리지 하드웨어를 가상화하여 하이퍼 컨버지드 클러스터의 서버에 분산된 가상화된 드라이브 풀에 기반한 볼륨을 만들 수 있습니다.
+  - title: 장애 조치(failover) 클러스터링
+    imageSrc: https://docs.microsoft.com/en-us/windows-server/media/i-cluster.svg
+    links:
+    - url: https://docs.microsoft.com/en-us/windows-server/failover-clustering/failover-clustering-overview
+      text: 여러 서버를 함께 그룹화하여 클러스터의 모든 서버에서 가상 머신과 같은 워크로드를 실행하고 부하 분산과 장애 조치가 서버 간에 정상적으로 수행될 수 있도록 합니다.
+  - title: 소프트웨어 방식 네트워킹
+    imageSrc: https://docs.microsoft.com/en-us/windows-server/media/i-network.svg
+    links:
+    - url: https://docs.microsoft.com/windows-server/networking/sdn/
+      text: 네트워크 하드웨어를 가상화하여 기본 실제 네트워크에서 워크로드를 추상화하는 네트워크와 정책을 동적으로 만들고 관리할 수 있습니다.
+  - title: Windows Admin Center
+    imageSrc: https://docs.microsoft.com/en-us/windows-server/media/i-admin-center.svg
+    links:
+    - url: https://docs.microsoft.com/en-us/windows-server/manage/windows-admin-center/overview
+      text: 서버 하드웨어를 가상화하여 하이퍼 컨버지드 클러스터의 서버에서 가상 머신을 실행할 수 있습니다.
+  - title: Azure 하이브리드 서비스에 연결
+    imageSrc: https://docs.microsoft.com/en-us/windows-server/media/i-microsoft-azure.svg
+    links:
+    - url: https://docs.microsoft.com/en-us/windows-server/azure-hybrid-services
+      text: 사이트 복구, 모니터링 등을 위해 클러스터를 Azure 하이브리드 서비스에 연결합니다.
+  - title: Azure Stack HCI
+    imageSrc: https://docs.microsoft.com/en-us/windows-server/media/i-azure-stack.svg
+    links:
+    - url: https://docs.microsoft.com/en-us/windows-server/azure-stack-hci
+      text: 선택한 파트너가 유효성을 검사한 하드웨어 솔루션을 사용하여 Windows Server 2019 가상화와 클러스터링 기술을 쌍으로 결합하여 소프트웨어 정의 데이터 센터의 튜닝을 추측할 수 있도록 지원합니다.
+  - title: WSSD(Windows Server 소프트웨어 정의)
+    imageSrc: https://docs.microsoft.com/media/common/i_data-collection.svg
+    links:
+    - url: https://www.microsoft.com/cloud-platform/software-defined-datacenter
+      text: 선택한 파트너가 유효성을 검사한 하드웨어 솔루션을 사용하여 Windows Server 2016 가상화와 클러스터링 기술을 쌍으로 결합하여 소프트웨어 정의 데이터 센터의 튜닝을 추측할 수 있도록 지원합니다.
